--- a/style2.css
+++ b/style2.css
@@ -19,6 +19,12 @@
 	
 }
 
+input{
+	border: 1px solid black;
+	font-size: 15px;
+	border-radius: 30px;
+	
+}
 
 
  .navbar ul{
@@ -246,7 +252,7 @@ section{
 
 .sub-contenedor4Detalle input{
 		width: 100%;
-
+		
 
 
 }
@@ -320,9 +326,11 @@ section{
 	align-items: center;
 	justify-content: center;
 	height: 15%;
-		 gap: 20px;
-
+	gap: 20px;
+	margin: 0 50px;
 }
+
+
 
 .footer1 button{
 	 height: 45px;
