--- a/style2.css
+++ b/style2.css
@@ -7,23 +7,50 @@
 	
 }
 
+body{
+	
+	
+	max-height: 200vh;
+	
+}
+
+	a{
+		text-decoration: none;
+		
+	}
+
 .header{
 	
 	background-color: #FF9800;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	height: 80px;
+	height: 20%;
 	color: white;
 	font-weight: bold;
-	
 }
 
+ #screen0 img{
+	 width: 500px;
+	 height: 500px;
+	 display:none;
+	 
+ }
+
+header img{
+	
+	
+	width:70px; 
+	height:70px;
+	margin-left: 15px;
+}
 input{
 	border: 1px solid black;
 	font-size: 15px;
-	border-radius: 30px;
-	
+	border-radius: 5px;
+	background: #DFDFDF;
+	border: 0;
+	font-weight: bold;
 }
 
 
@@ -34,14 +61,16 @@ input{
 }
 
  .navbar li{
-	 padding: 10px 20px;
+	 padding: 25px 20px;
 	 position: relative;
 	 transition-duration: 0.1s;
+	 cursor: pointer;
+	 
  }
 
 .navbar li:hover{
 	transform: translateX(-2px);
-	
+	background: #FFD393;
 	
 }
 .logo-bar .logo{
@@ -57,6 +86,8 @@ input{
 		
 }
 
+
+
 .dropdown{
 	
 	display: none;
@@ -69,6 +100,7 @@ input{
 	position: absolute;
 	top: 100%;
 	left: 0;
+		
 	
 }
 
@@ -97,7 +129,8 @@ input{
 section{
 	
 	display: flex;
-	height: 87.89vh;
+	min-height: 80vh;
+	max-height: 180vh;
 	align-items: center;
 	justify-content: center;
 	
@@ -119,11 +152,6 @@ section{
 	display: flex;
 	background: #EC8700;
 	height: 10%;
-	
-	
-	
-	
-	
 	
 }
 
@@ -186,14 +214,15 @@ section{
 	position: absolute;
 	top: 20%;
     right: 80px;
-
+	
 	z-index: 2;
 	
 	
 }
 
+
 .sub-contenedor1No #label1{
-	margin-right:63px;
+	margin-right:50px;
 	
 }
 
@@ -267,6 +296,12 @@ section{
 	height: 75%;
 }
 
+.salvacion label{
+	font-weight: bold;
+	
+	
+}
+
 .contenedor-OG{
 	
 	display: flex;
@@ -332,6 +367,7 @@ section{
 	height: 15%;
 	gap: 20px;
 	margin: 0 50px;
+	padding-bottom: 10px;
 }
 
 
@@ -361,9 +397,9 @@ section{
 
 .contenedor-anulacion{
 	
-	height: 70%;
+	height: 75%;
 	width: 70%;
-	display: flex;
+	display: none;
 	flex-direction: column;
 	box-shadow: 0 0 25px #EC8700;
 }
@@ -378,11 +414,12 @@ section{
 }
 
 .text-anulacion label{
-	font-size: 20px;
+	font-size: 23px;
 	width: 40%;
 	margin: 10px 5px 0px 4px;
 	padding: 0 0 0 15px;
-	font-weight: bolder;
+	font-weight: bold;
+	color: white;
 	
 }
 
@@ -415,7 +452,9 @@ section{
 .subcontenedor-anulacion2 label{
 	width: 100%;
 	margin: 5px 10px 5px 10px;
-	
+		font-weight: bolder;
+		font-size: 17px;
+
 }
 
 .subcontenedor-anulacion2 #input-anulacion2{
@@ -423,6 +462,7 @@ section{
 	height: 40%;
 	border-radius: 10px;
 	margin: 1px 10px 5px 10px;
+	outline: none;
 	
 }
 
@@ -432,28 +472,61 @@ section{
 	border-radius: 5px;
 	margin: 1px 10px 5px 10px;
 	
+	outline: none;
+
+}
+
+.subcontenedor-anulacion2 button{
+	
+	height: 45px;
+	width: 170px;
+	font-size: 16px;
+	border: none;
+	 background: #FF9800;
+	 color: white;
+	 border-radius: 5px;
+	 cursor: pointer;
+	 font-weight: bold;
+	 
+	
+}
+
+.subcontenedor-anulacion2 button:hover{
+	
+	
+	background: #C97301;
+}
+.subcontenedor-anulacion2 .button1{
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	
 }
 
 .subcontenedor-anulacion1text{
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
-	margin: 10px 20px 0;
+	margin: 10px 40px 0;
 	gap: 20px;
 	flex-wrap: wrap;
 	
 	gap:0;
 	
-	
 }
 
-
+.subcontenedor-anulacion1text{
+	font-weight: bold;
+	
+}
 .subcontenedor-anulacion1text input{
 	margin-right: 20px;
 	border-radius: 5px;
-	height: 25px;
+	height: 30px;
+	outline: none;
+	
+	
 }
-
 .subcontenedor-anulacion1text button{
 	height: 30px;
 	width: 69px;
@@ -465,13 +538,19 @@ section{
 	 cursor: pointer;
 	 font-weight: bold;
 }
+
+.subcontenedor-anulacion1text button:hover{
+	background: #C97301;
+	
+}
+
 .text-anulacion01{
 	display: flex;
 	margin-bottom: 0;
 	width: 100%;
 	justify-content: center;
 	
-	transform: translateX(1px);
+	transform: translateX(-35px);
 }
 
 
@@ -479,25 +558,26 @@ section{
 .subcontenedor-anulacion1Fecha{
 	display: flex;
 	margin-top: 40px;
-	flex-direction: column;
 	
+	flex-direction: column;
 	
 }
 
 .subcontenedor-anulacion1Fecha label{
 	width: 100%;
 	margin: 5px 10px 5px 10px;
+	font-weight: bold;
 	
 	
 }
 
 .subcontenedor-anulacion1Fecha input{
 	width: 80%;
-	height: 25px;
+	height: 30px;
 	border-radius: 5px;
 	margin: 1px 10px 5px 10px;
-	
-	
+	outline: none;
+
 }
 .subcontenedor-anulacion1Fecha #input-Fecha{
 	width: 25%;
@@ -513,17 +593,480 @@ section{
 	width: 30%;
 	height: 25px;
 	border-radius: 5px;
-	margin: 1px 10px 5px 10px;
-	
-	
-	
+	margin: 1px 10px 5px 10px;	
 	
 }
 
 
-.subcontenedor-anulacion1text{
+
+
+/*Contenedor 3*/
+
+.contenedor3{
+	
+	height: 75%;
+	width: 70%;
+	display: none;
+	flex-direction: column;
+	box-shadow: 0 0 25px #EC8700;
+}
+
+
+
+/*Contenedor 4*/
+
+	.contenedor4{
+		height: 60%;
+		width: 80%;
+		display: none;
+		flex-wrap: wrap;
+		box-shadow: 0 0 25px #EC8700;
+		
+	}
 	
 	
+	.contenedor4-title{
+		
+		height: 18%;
+		width: 100%;
+		background: #FF9800;
+		display: flex;
+		align-items: center;
+		
+		
+		
+	}
+	
+	.contenedor4-title label{
+		font-size: 25px;
+		color: white;
+		font-weight: bold;
+		margin-left: 10px;
+		
+	}
+	
+	.subcontenedor4{
+		display: flex;
+		height: 82%;
+		width: 100%;	
+	}	
+	.subcontenedor4-1{
+		
+		display: flex;
+		height: 100%;
+		width: 25%;
+		justify-content: center;
+		align-items: center;		
+		flex-direction: column;
+		
+	}
+	
+	.subcontenedor4-1 label{
+		height: 30px;
+		width: 80%;
+		font-size: 16px;
+		font-weight: bold;
+	}
+	
+	.subcontenedor4-1 input{
+		height: 25px;
+		width: 80%;
+		
+		
+	}
+	.subcontenedor4-2{
+		display: flex;
+		height: 100%;
+		width: 35%;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;	
+	}
+	
+	.subcontenedor4-2 label{
+		height: 30px;
+		width: 80%;
+		font-size: 16px;
+		font-weight: bold;
+	}
+
+
+	.subcontenedor4-2 input{
+		height: 25px;
+		width: 80%;
+		
+		
+	}
+	
+	.subcontenedor4-2 select{
+		height: 30px;
+		width: 80%;
+		margin-bottom: 10px;
+		margin-top: 0;
+		border: 2px solid black;
+		border-radius: 7px;
+	}
+	
+	.subcontenedor4-2 select .negrita{
+		height: 30px;
+		font-weight: bold;
+	
+		
+		
+	}
+	
+	.contenedor4-button{
+		margin-top: 20px;
+		display: flex;
+		justify-content: center;
+		gap: 5px;
+		padding-bottom: 10px;
+		
+		
+	}
+	
+	.subcontenedor4-2 button{
+		height: 30px;
+		width: 69px;
+		font-size: 13px;
+		border: none;
+		background: #FF9800;
+		color: white;
+		border-radius: 5px;
+		cursor: pointer;
+		font-weight: bold;
+		
+		
+	}
+	
+	.subcontenedor4-2 button:hover{
+	background: #C97301;
+	
+}
+
+	/*este es el contenedor 5*/
+	.contenedor5{
+		margin: 20px;
+		height: 900px;
+		width: 80%;
+		display: none;
+		flex-wrap: wrap;
+		box-shadow: 0 0 25px #EC8700;
+		
+		
+	}
+	
+	.contenedor5-title{
+		
+		height: 12%;
+		width: 100%;
+		background: #FF9800;
+		display: flex;
+		align-items: center;
+		
+		
+		
+	}
+	
+	.contenedor5-title label{
+		font-size: 25px;
+		color: white;
+		font-weight: bold;
+		margin-left: 10px;
+		
+	}
+	
+	.subcontenedor5{
+		display: flex;
+		height: 100%;
+		width: 100%;
+		flex-direction: column;
+		
+	}
+	
+	.subcontenedor5-1{
+		
+		display: flex;
+		height: 50%;
+		width: 100%;
+		
+		
+	}
+	.subcontenedor5-11{
+		
+		width: 25%;
+		height:90%;
+		display: flex;
+		flex-direction: column;
+		margin-top: 38px;
+		align-items: center;
+		justify-content: center;
+	}
+	
+		.subcontenedor5-11 #titulo1e{
+			
+			margin-top: 40px;
+		}
+	.subcontenedor5-12{
+		
+		width: 25%;
+		height:90%;
+		margin-top: 10px;
+		display: flex;
+		flex-wrap: wrap;
+		flex-direction: column;
+		
+	}
+	
+	.subcontenedor5-12 label{
+		width: 100%;
+		font-size: 16px;
+		font-weight: bold;
+		
+	}
+	
+	.subcontenedor5-12 input{
+		width: 90%;
+		padding: 5px;
+		margin: 3px 0;
+	}
+
+	.subcontenedor5-13{
+		display: flex;
+		margin: 10px 0 0 0;
+		width: 50%;
+		height:100%;
+	
+		
+		
+	}
+	
+	.subcontenedor5-13 input{
+		padding: 5px;
+		margin: 3px 0;
+		width: 90%;
+		
+	}
+	
+	
+	.subcontenedor5-13{
+		font-size: 16px;
+		font-weight: bold;
+		
+	}
+	.subcontenedor5-131{
+		
+		display: flex;
+		flex-direction: column;
+		width: 50%;
+		margin-right: 10px;
+		
+	}
+	
+	.subcontenedor5-131 label a{
+	
+		float: right;
+		transform: translateX(-25px);
+		
+	}
+	
+	.subcontenedor5-131 .inputespacio1{
+		margin-bottom: 25px;
+		
+		
+		
+	}
+	
+	.subcontenedor5-132{
+		
+		display: flex;
+		flex-direction: column;
+		width: 50%;
+		
+		
+		
+	}
+	
+	
+	.subcontenedor5-132 .inputespacio2{
+		margin-bottom: 125px;
+		
+		
+		
+	}
+	
+	
+	.subcontenedor5-132 #inputespacio3{
+		margin-bottom: 80px;
+		
+		
+		
+	}
+	.subcontenedor5-11 label{
+		width: 100%;
+		
+		
+	}
+	
+	.subcontenedor5-132 button{
+		margin: 20px 0 0 0;
+		padding: 5px;
+		font-size: 13px;
+		border: none;
+		background: #FF9800;
+		color: white;
+		border-radius: 5px;
+		cursor: pointer;
+		font-weight: bold;
+		width: 90%;
+		
+	}
+	
+	.subcontenedor5-132  button:hover{
+		
+		background: #C97301;
+	}
+	
+	
+	
+	.Titulo1{
+		
+		font-size: 17px;
+		margin: 10px 5px 7px 15px;
+		font-weight: bold;
+		
+	}
+	
+	.Titulo2{
+		
+		font-size: 15px;
+		margin: 8px 5px 3px 15px;
+		font-weight: bold;
+		
+	}
+	
+	.Titulo3{
+		
+		font-size: 16px;
+		margin: 8px 5px 7px 60px;
+		
+		
+	}
+	
+	.subcontenedor5-2{
+		
+		display: flex;
+		height: 25%;
+		width: 100%;
+		border-top: 3px solid black;
+		
+	}
+	
+	.subcontenedor5-21{
+		
+		width: 70%;
+		height:90%;
+		display: flex;
+		flex-direction: column;
+		margin-top: 20px;
+	}
+	
+	.subcontenedor5-21 #Titulo2e{
+			
+			margin-top: 48px;
+		}
+	
+	
+	.subcontenedor5-2 input{
+		padding: 5px;
+		margin: 3px 0;
+		width: 90%;
+		
+	}
+	.Titulo2p{
+		
+		font-size: 16px;
+		margin: 1px 0px 4px 3px;
+		font-weight: bold;
+		
+	}
+	
+	.Titulo3p{
+		
+		font-size: 16px;
+		margin: 12px 0px 3px 30px;
+		
+		
+	}
+	
+	.subcontenedor5-22{
+		
+		display: flex;
+		flex-direction: column;
+		width: 50%;
+		margin-right: 10px;
+		margin-top: 50px;
+		
+	}
+	
+	.subcontenedor5-22 label{
+		width: 100%;
+		font-size: 16px;
+		font-weight: bold;
+		
+	}
+	
+	
+	.subcontenedor5-22 label a{
+	
+		float: right;
+		transform: translateX(-30px);
+		
+	}
+	
+	.subcontenedor5-23 #input3{
+		margin-top: 10px;
+		margin-bottom: 116px;
+	
+	}
+	
+	
+	
+	
+	.subcontenedor5-3{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 10%;
+	gap: 20px;
+	margin: 0 50px;
+	
+}
+
+
+
+.subcontenedor5-3 button{
+	 height: 45px;
+	 width: 100px;
+	 border: none;
+	 background: #FF9800;
+	 color: white;
+	 font-size: 17px;
+	 font-weight: bold;
+	 border-radius: 5px;
+	 cursor: pointer;
+	 transform: translateY(15px);
+	
+}
+
+.subcontenedor5-3 button:hover{
+	background: #C97301;
 	
 	
 }
+	
+	
+	
+	
+	
+	
